# miscprojects

./: .gitignore  MonsterPrep.py  README.md  ansianim.py  delicious_export.py  descent-chapter2-monsters.txt  e2_homenode.py  main.py  parkinglotimages.bat  parkinglotimages.py  pipe_puzzle.py  pipe_puzzle.spec  pointbuy.py  pyproject.toml
Composer/: ANCIENT_NATIONS_REVIEW.md  COMPOSER_SCRATCH.md  CONVERSATION.md  VELLUM_TO_VESPER.md  VESPER_INTRODUCTION.md  WREN_REPLY.md  continue_conversation.cmd
ParkingLotImagesTray/: App.config  ParkingLotImagesTray.csproj  ParkingLotImagesTray.settings.json  ParkingLotTrayMain.cs  TrayApplicationContext.cs
Vellum/: ANCIENT_NATIONS_REVIEW.md  CONVERSATION.md  VELLUM_SCRATCH.md  VELLUM_TO_VESPER.md  VESPER_INTRODUCTION.md  continue_conversation.cmd
Vesper/: INTRODUCTION.md  JUNIOR_TICKETS.md  VESPER_REPLY.md
ancient_nations/: ISSUES.md  README.md  ai.py  cli.py  combat.py  constants.py  engine.py  entities.py  events.py  game.py  loader.py  main.py  namegen.py  narrative.py  nation.py  out.json  pathfinding.py  pyproject.toml  renderer.py  snapshot.py  world.py
l5r-print-deck/: README.md  printDeck.py
pipe_puzzle/: main.py  pipe_puzzle.spec  pyproject.toml
scrollcase/: CLAUDE.md  DDB_PROXY.md  README.md  campaign_config.py  ddb_client.py  generate_artwork.py  generate_image.py  link_session_entities.py  process_session.py  prompt_dm_assistant.md  pyproject.toml  style_guide.md  tasks.md  wiki_structure.md
scrollkeeper/: .gitignore  (+9 more)
whisper-transcribe/: .gitignore  TODO.md  main.py  pyproject.toml  whisper-transcribe.bat
(+15 files in other folders)
