[project]
name = "whisper-transcribe"
version = "0.1.0"
description = "CLI tool to transcribe audio files using OpenAI's Whisper model"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "audioop-lts>=0.2.2",
    "faster-whisper>=1.2.1",
    "groq>=1.1.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
whisper-transcribe = "main:main"
